--- a/app/locale/langs/en/common.json
+++ b/app/locale/langs/en/common.json
@@ -1,15 +1,11 @@
 {
-  "appName": "WebScrapper",
+  "appName": "TIVO",
   "menu": "Menu",
   "home": "Home",
   "copyright": "© 2000-2030, All rights reserved.",
   "somethingWentWrongTitle": "Something went wrong",
   "somethingWentWrongDesc": "Sorry for the inconvenience caused. <br /> We are working on it. <br /> Stay connected.",
-  "oops": "Oops!",
-  "tryAgainSometime": "Something went wrong. Either please check your input or try again after some time.",
   "pageNotFound": "Page Not Found!!!",
   "tryAgain": "Please try again!",
-  "URL": "http(s)://www.website.com",
-  "showAll": "Show All",
   "failed": "Something went wrong. Please try again after some time."
 }
