search functionality complete

--- a/app/locale/langs/en/user.json
+++ b/app/locale/langs/en/user.json
@@ -2,5 +2,6 @@
   "listTitle": "User List",
   "noUserFound": "No user found",
   "addedPkgTitle": "Added Packages",
-  "addedAddonsPkgTitle": "Added Addons Packages"
+  "addedAddonsPkgTitle": "Added Addons Packages",
+  "searchByNamePlaceholder": "Search by name"
 }
