added dashboard locale files

--- a/app/locale/langs/en/dashboard.json
+++ b/app/locale/langs/en/dashboard.json
@@ -1,3 +1,6 @@
 {
-  "title": "Dashboard"
+  "title": "Dashboard",
+  "usersPerRegion": "Users per region",
+  "usersPerPackage": "Users per subscribed package",
+  "usersPerAddons": "Users per subscribed addons"
 }
