creating create user post api

--- a/app/locale/langs/en/user.json
+++ b/app/locale/langs/en/user.json
@@ -6,6 +6,7 @@
   "searchByNamePlaceholder": "Search by name",
   "createUser": "Create User",
   "customerName": "Customer Name",
+  "searchUser": "Search User",
   "email": "Email",
   "package": "Package",
   "region": "Region",
